--- a/alacritty.yml
+++ b/alacritty.yml
@@ -105,9 +105,9 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    #family: Monoid HalfLoose 
+    #family: mononoki Nerd Font Mono 
     family: FiraCode Nerd Font
-    #family: Anonymice Nerd Font Mono
+    #family: Hack Nerd Font Mono
     # The `style` can be specified to pick a specific face.
     # style: Regular
     # Bold font face
@@ -799,28 +799,32 @@ font:
 colors:
   # Default colors
   primary:
-    background: '#202734'
-    foreground: '#CBCCC6'
+    background: '0xffffff'
+    foreground: '0x4d5566'
 
   # Normal colors
   normal:
-    black: '#191E2A'
-    red: '#FF3333'
-    green: '#BAE67E'
-    yellow: '#FFA759'
-    blue: '#73D0FF'
-    magenta: '#FFD580'
-    cyan: '#95E6CB'
-    white: '#C7C7C7'
+    black: '0x24292e'
+    red: '0xd73a49'
+    green: '0x22863a'
+    yellow: '0xb08800'
+    blue: '0x0366d6'
+    magenta: '0x6f42c1'
+    cyan: '0x1b7c83'
+    white: '0x4d5566'
 
   # Bright colors
   bright:
-    black: '#686868'
-    red: '#F27983'
-    green: '#A6CC70'
-    yellow: '#FFCC66'
-    blue: '#5CCFE6'
-    magenta: '#FFEE99'
-    cyan: '#95E6CB'
-    white: '#FFFFFF'
-theme: Ayu-Mirage
+    black: '0x586069'
+    red: '0xcb2431'
+    green: '0x28a745'
+    yellow: '0xdbab09'
+    blue: '0x2188ff'
+    magenta: '0x8a63d2'
+    cyan: '0x1b7c83'
+    white: '0x4d5566'
+
+  indexed_colors:
+    - { index: 16, color: '0xd18616' }
+    - { index: 17, color: '0xcb2431' }
+theme: github_light_default
