--- a/alacritty.yml
+++ b/alacritty.yml
@@ -807,10 +807,11 @@ colors:
 
   # Normal colors
   normal:
-    black: '#282828'
+    #black: '#282828'
+    black: '#ebdbb2'
     red: '#cc241d'
-    #green: '#98971a'
     green: '#98971a'
+    #green: '#282828'
     yellow: '#d79921'
     blue: '#458588'
     magenta: '#b16286'
