--- a/alacritty.yml
+++ b/alacritty.yml
@@ -800,18 +800,15 @@ colors:
   # Default colors
   primary:
     # hard contrast: background = '#1d2021'
-    # background: '#282828'
-    background: '#000000'
+    background: '#282828'
     # soft contrast: background = '#32302f'
     foreground: '#ebdbb2'
 
   # Normal colors
   normal:
-    #black: '#282828'
-    black: '#ebdbb2'
+    black: '#282828'
     red: '#cc241d'
     green: '#98971a'
-    #green: '#282828'
     yellow: '#d79921'
     blue: '#458588'
     magenta: '#b16286'
